Don't confine action to physical albums

BUG: 136254

svn path=/trunk/extragear/graphics/digikam/; revision=661132